# openbmc_template_app

./: README.md  meson.build  template-app_git.bb  xyz.openbmc_project.templateapp.service
include/: template_app.hpp
src/: template_app.cpp  template_app_main.cpp
